# OpenClawMonitor

./: .env.example  .gitignore  COMPLETION_CHECKLIST.md  PROJECT_COMPLETE.txt  PROJECT_SUMMARY.md  README.md  RUN_COMMANDS.md  pyproject.toml  requirements.txt  setup.sh  verify.sh
config/: config.yaml  logging.yaml
docs/: EMAIL_CONFIG.md  EMAIL_TEMPLATE_DELIVERY.md  EMAIL_TEMPLATE_GUIDE.md  INCREMENTAL_UPDATE.md  LOG_DATA_ZERO.md  OPENCLAW_ANALYSIS_SUMMARY.md  OPENCLAW_LOG_ANALYSIS.md  QUICKSTART_LOG_ANALYSIS.md  RELEASE_NOTES_v2.0.md  STRUCTURE_UPDATE.md  Template_Quick_Reference.md
reports/: openclaw_analysis_20260202_165132.html  openclaw_analysis_20260202_170803.html  openclaw_analysis_20260202_171104.html  openclaw_analysis_20260202_171510.html  openclaw_analysis_20260202_172417.html  openclaw_analysis_20260202_173046.html  openclaw_analysis_20260202_185542.html  openclaw_analysis_20260202_193428.html  openclaw_analysis_20260202_193551.html  openclaw_analysis_20260202_193640.html  openclaw_analysis_20260202_193941.html  openclaw_analysis_20260202_195320.html  openclaw_analysis_20260202_200038.html  openclaw_analysis_20260202_200332.html
scripts/: enable_logs.sh  install_launchd.sh  start.sh  verify_email_config.sh  verify_log_analysis.sh
src/: __init__.py  config.py  main.py  scheduler.py  settings.py
src/db/: __init__.py  manager.py  models.py
src/monitor/: __init__.py  base.py  log_parser.py  openclaw_log_analyzer.py  openclaw_report_generator.py  openclaw_report_generator_old.py  process_monitor.py  security_analyzer.py  watchdog_handler.py
src/monitor/plugins/: __init__.py  example_plugin.py
src/report/: __init__.py  email_preview_20260202_175607.html  generator.py
src/report/notifier/: __init__.py  base_notifier.py  email_sender.py
src/utils/: __init__.py  helpers.py  logger.py  path_resolver.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_config.py  test_log_parser.py
