[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenClawMonitor"
version = "0.1.0"
description = "OpenClaw 活动监控工具 - 用于监控 Mac 上 OpenClaw 的活动和安全事件"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw Monitor", email = "monitor@openclaw.local"},
]
keywords = [
    "openclaw",
    "monitoring",
    "security",
    "macos",
    "process-monitoring",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "psutil>=5.8.0",
    "watchdog>=2.2.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "schedule>=1.1.8",
    "pydantic>=1.8.0",
    "PyYAML>=5.4.0",
    "keyring>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "isort>=5.9",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/yourusername/OpenClawMonitor"
Documentation = "https://github.com/yourusername/OpenClawMonitor/wiki"
Repository = "https://github.com/yourusername/OpenClawMonitor.git"
Issues = "https://github.com/yourusername/OpenClawMonitor/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["openclawmonitor*"]

[tool.setuptools.package-data]
openclawmonitor = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # 目录
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["src/openclawmonitor"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
